# mdta

./: .cookiecutter.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.md  reference.md  usage.md
src/mdta/: __init__.py  __main__.py  cli.py
src/mdta/commands/: __init__.py
src/mdta/parsers/: __init__.py
src/mdta/parsers/charmm/: __init__.py
src/mdta/parsers/configuration/: __init__.py  configparser.py
tests/: __init__.py  test_main.py
tests/parsers/: __init__.py
tests/parsers/charmm/: __init__.py
tests/parsers/configuration/: __init__.py  test_configparser.py
