[tool.poetry]
name = "mdta"
version = "0.0.0"
description = "Molecular Dynamics Trajectory Analysis"
authors = ["Timothy H. Click, Ph.D. <Timothy.Click@briarcliff.edu>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/tclick/mdta"
repository = "https://github.com/tclick/mdta"
documentation = "https://mdta.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/tclick/mdta/releases"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.1.3"
holoviews = "^1.14.9"
scikit-learn = "^1.1.1"
MDAnalysis = "^2.2.0"
modin = "0.15.2"
jupyter = {version = "^1.0.0", optional = true}
ipykernel = {version = "^6.15.0", optional = true}
plotly = {version = "^5.8.2", optional = true}
jupyterlab = {version = "^3.4.3", optional = true}
jupyterlab-code-formatter = {version = "^1.4.11", optional = true}
jupyterlab-mathjax3 = {version = "^4.3.0", optional = true}
nglview = {version = "^3.0.3", optional = true}
PyYAML = "^6.0"
pylibyaml = "^0.1.0"

[tool.poetry.extras]
jupyter = ["jupyter", "jupyterlab", "jupyterlab-code-formatter",
    "jupyterlab-mathjax3", "nglview", "ipykernal", "plotly"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cache = "^1.0"
pytest-console-scripts = "^1.3.1"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.1.1"
pytest-pep8 = "^1.0.6"
pytest-mypy = "^0.9.1"
pytest-random-order = "^1.0.4"
coverage = {version = "^6.4.1", extras = ["toml"]}
safety = "^1.10.3"
mypy = "^0.961"
typeguard = "^2.13.3"
xdoctest = {version = "^1.0.0", extras = ["colors"]}
Sphinx = "^5.0.2"
sphinx-autobuild = "^2021.3.14"
sphinx-automodapi = "^0.14.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-click = "^4.2.0"
pre-commit = "^2.19.0"
pre-commit-hooks = "^4.3.0"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.6"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.6"
flake8-import-order = "^0.18.1"
pep8-naming = "^0.13.0"
darglint = "^1.8.1"
reorder-python-imports = "^3.1.0"
Pygments = "^2.12.0"
ipython = "^8.4.0"
towncrier = "^21.9.0"
nox = "^2022.1.7"
nox-poetry = "^1.0.0"
numpydoc = "^1.4.0"
codecov = "^2.1.12"
pyupgrade = "^2.34.0"
types-PyYAML = "^6.0.9"
types-click = "^7.1.8"
ipykernel = "^6.15.0"

[tool.poetry.scripts]
mdta = "mdta.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["mdta", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
